# zyntra

./: .gitignore  README.md
core/: CMakeLists.txt  build.sh  main.cpp  run_tests  zintra-core
core/src/: checksum.cpp  checksum.h  command_builder.cpp  command_builder.h  command_schema.cpp  command_schema.h  controller_commands.cpp  controller_commands.h  httplib.h  json_example.h  main.cpp  system_command.cpp  system_command.h  system_state.h  web_server.cpp
core/src/controllers/: mega.cpp  mega.h  nano.cpp  nano.h  uno.cpp  uno.h
core/tests/: test_checksum.cpp  test_command_builder.cpp
docs/: commands.md  packet_format.md
web/: package-lock.json
web/app/api/controllers/: route.tsx
web/app/api/events/: route.ts
web/app/controllers/: page.tsx
